# manjaro-control-panel

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cli/: CMakeLists.txt
cli/common/: CMakeLists.txt  output.hpp  progress_bar.hpp  symbols.hpp  table.hpp
cli/kernel/: CMakeLists.txt  main.cpp
cli/kernel/commands/: command.hpp  info_command.hpp  install_command.hpp  kernel_filter.hpp  kernel_formatter.hpp  list_command.hpp  running_command.hpp
cli/kernel/common/: colors.hpp  output.hpp  progress_bar.hpp  table.hpp
cli/mhwd/: CMakeLists.txt  main.cpp
cli/mhwd/commands/: install_command.cpp  install_command.hpp  list_command.cpp  list_command.hpp  remove_command.cpp  remove_command.hpp
cmake/: McpCompilerSettings.cmake  McpQmlModule.cmake  McpQtSettings.cmake
libmcp/: CMakeLists.txt  ProgressFlattener.cpp  ProgressFlattener.hpp  Types.hpp
libmcp/agent/: Command.hpp
libmcp/kernel/: CMakeLists.txt  Kernel.hpp  KernelManager.cpp  KernelManager.hpp  KernelProvider.cpp  KernelProvider.hpp  KernelTransactionBuilder.cpp  KernelTransactionBuilder.hpp  Transaction.cpp  Transaction.hpp
libmcp/mhwd/: CMakeLists.txt  Config.hpp  ConfigProvider.hpp  Device.hpp  DeviceCategorizer.cpp  DeviceCategorizer.hpp  DeviceProvider.hpp  DriverManager.hpp  DriverTransactionBuilder.hpp  Transaction.hpp  Types.hpp
libmcp/mhwd/internal/: Config.cpp  ConfigProvider.cpp  Device.cpp  DeviceProvider.cpp  DriverManager.cpp  DriverTransactionBuilder.cpp  PciDeviceScanner.cpp  PciDeviceScanner.hpp  StringUtils.hpp  Transaction.cpp  Types.hpp  UdevUtils.hpp  UsbDeviceScanner.cpp  UsbDeviceScanner.hpp
libmcp/mhwd/internal/udev/: DeviceScanner.hpp  PciDeviceScanner.cpp  PciDeviceScanner.hpp  UsbDeviceScanner.cpp  UsbDeviceScanner.hpp
mcp-qt/: CMakeLists.txt
mcp-qt/about/: CMakeLists.txt
mcp-qt/about/kcm/: AboutKCModule.cpp  AboutKCModule.h  CMakeLists.txt  about.qrc  kcm_mcp_about.json
mcp-qt/about/kcm/ui/: main.qml
mcp-qt/common/: CMakeLists.txt
mcp-qt/common/qml/: Badge.qml  CMakeLists.txt  Components_init.cpp  ConfirmationDialog.qml  InstallationDialog.qml
mcp-qt/common/src/: CMakeLists.txt  ModuleDescription.h  ProgressNotifier.cpp  ProgressNotifier.h  TransactionAgentLauncher.cpp  TransactionAgentLauncher.h  TransactionProgress.h  VersionInfo.cpp  VersionInfo.h
mcp-qt/data/: assets.qrc
mcp-qt/data/applications/: mcp-qt.desktop.in
mcp-qt/data/assets/: CMakeLists.txt  assets.qrc
mcp-qt/data/categories/: settings-system-administration-mcp.desktop
mcp-qt/kernel/: CMakeLists.txt  KernelData.h  KernelListModel.cpp  KernelListModel.h  KernelViewModel.cpp  KernelViewModel.h  kernel.qrc  standalone.qrc  standalone_main.cpp
mcp-qt/kernel/classic/: BadgeWidget.cpp  BadgeWidget.h  KernelCardWidget.cpp  KernelCardWidget.h  KernelItemWidget.cpp  KernelItemWidget.h  KernelListDelegate.cpp  KernelListDelegate.h  KernelPage.cpp  KernelPage.h  KernelWidgetView.cpp  KernelWidgetView.h  SelectedKernelsWidget.cpp  SelectedKernelsWidget.h  classic_main.cpp  main.cpp
mcp-qt/kernel/kcm/: CMakeLists.txt  KernelKCModule.cpp  KernelKCModule.h  KernelModuleDescription.cpp  KernelModuleDescription.h  kcm_mcp_kernel.json  main.qml
mcp-qt/kernel/ui/: ChangelogSheet.qml  KernelDelegate.qml  KernelListView.qml  SelectedKernels.qml  View.qml  main.qml  standalone_main.qml
mcp-qt/mhwd/: CMakeLists.txt  CategoryTreeModel.cpp  CategoryTreeModel.h  DeviceData.h  DeviceListModel.cpp  DeviceListModel.h  DriverData.h  DriverListModel.cpp  DriverListModel.h  MhwdViewModel.cpp  MhwdViewModel.h  mhwd.qml  mhwd.qrc  mhwd_old.qml.bak  standalone.qrc  standalone_main.cpp
mcp-qt/mhwd/kcm/: CMakeLists.txt  MhwdKCModule.cpp  MhwdKCModule.h  kcm_mcp_mhwd.json  mhwd.qrc
mcp-qt/mhwd/ui/: CategorySection.qml  DeviceCard.qml  DriverDetailsPanel.qml  DriverItem.qml  View.qml  main.qml  standalone_main.qml
mcp-qt/modules/: CMakeLists.txt
mcp-qt/transaction-agent/: AgentUi.cpp  AgentUi.h  CMakeLists.txt  main.cpp
packaging/: PKGBUILD
